# Trading-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: integrations.yaml
dashboard/: api.py  start.sh
data/: AMZN_model_comparison.json  bill_fanter_levels.json  bill_watchlist_template.json  vision_levels.json
data/rag_pipeline/chroma_db/: index_stats.json
data/transcriber/: processed_videos.json
data/transcriber/signals/: -1lB1iLQ8vw_signals.json  05IXX9hDGA4_signals.json  1JQW9kVI4gA_signals.json  2v2AkR3zofs_signals.json  9xhP60b25Rk_signals.json  CFfM-kx-uMw_signals.json  ED_sp8xc17U_signals.json  E_OEDYclPr8_signals.json  JnKGza_QEPQ_signals.json  Ld2JJf18SIw_signals.json  Ll_fWl039pc_signals.json  MKHF4qzPj3g_signals.json  M_k0PQ_jOaY_signals.json  MpGmuEta-po_signals.json  NPOsBvQYfbw_signals.json  QQS3PJ4Uenw_signals.json  QUBwZmRqcg0_signals.json  RREeKr3wz9E_signals.json  RXrUp6oNscg_signals.json  VrlH-k_ivfE_signals.json  (+12 more)
database/: schema.sql
scripts/: backtest.py  backtest_levels.py  blind_evaluation.py  daily_vision_scan.py  demo_paper_trader.py  model_comparison_test.py  monitor_bill_fanter.sh  paper_dashboard.py  position_monitor.py  quick_eval.py  run_local.py  start.sh  top_setups.py  transcribe_youtube.py  vision_chart_analyzer.py
src/rag_pipeline/: __init__.py  align_data.py  download_video.py  extract_frames.py  monitor_rss.py  pipeline.py  rag_database.py  transcribe.py
src/trading_agent/: __init__.py  main.py  paper_trader.py  putt_indicator.py
tests/: __init__.py  test_zone_detector.py
(+84 files in other folders)
